<resources>
    <string name="app_name">Pizza Shop</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Sign Up</string>

    <!-- Strings related to login -->
    <string name="e_mail">E-Mail</string>
    <string name="login_email_hint">E-Mail</string>
    <string name="login_passwordHint">Password</string>
    <string name="login">LOGIN</string>
    <string name="login_username_or_password_is_incorrect">Username or Password is incorrect.</string>

    <!-- Strings related to signup -->
    <string name="signup">Sign Up</string>
    <string name="sign_up_first">SIGN UP</string>
    <string name="signup_user_already_exists">User already exists.</string>
    <string name="signup_passwordHint_first">Password</string>
    <string name="signup_passwordHint_second">Confirm Password</string>
    <string name="signup_username_or_password_is_incorrect">Username or Password is incorrect.</string>
    <string name="mail_icon_description">Mail Icon</string>
    <string name="show_password_pattern">Pattern: A + a + 1 + %</string>
    <string name="lock_for_lockicon">Lock for LockIcon</string>
    <string name="email_for_emailicon">EMail for EMailIcon</string>
    <string name="password_hint_login">Password</string>
    <string name="login_incorrect_credentials">Email or Password is incorrect.</string>
    <string name="signup_invalid_email">Email is not valid.</string>
    <string name="signup_invalid_password">Password not valid.</string>
    <string name="signup_invalid_confirm_password">Password not confirmed right.</string>
    <string name="pizza_list_empty">Pizza List Empty</string>
    <string name="image_to_show_up_if_pizza_list_is_empty">Image to show up if Pizza List is Empty</string>
    <string name="pizza_detail_image">Pizza Detail Image</string>
    <string name="product_ingredients_textview">Ingredients</string>
    <string name="product_nutrition_information_description">Nutrition Information</string>
    <string name="product_ingredients_description">Ingredients</string>
    <string name="product_nutrition_per_100g">per 100g</string>
    <string name="product_nutrition_energy_description">Energy</string>
    <string name="product_nutrition_fat_description">Fat</string>
    <string name="product_nutrition_protein_description">Protein</string>
    <string name="product_price_price_description">Price:</string>
    <string name="title_food">Food</string>
    <string name="title_drinks">Drinks</string>
    <string name="title_cart">Cart</string>
    <string name="drink_list_empty">Drink List Empty</string>
    <string name="plus_button_for_each_recyclerview_card">Plus Button for each Recyclerview-Card</string>
</resources>
