<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.apprentice.ti8m.myfirstrestclient.screens.login.LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login_fragment"
        android:name="android.support.v4.app.DialogFragment"
        android:layout_width="0dp"
        android:layout_height="364dp"
        android:layout_marginBottom="160dp"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/dialog_shape"
        android:elevation="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_input_layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="135dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/login_email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_input_layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input_layout_login">

            <EditText
                android:id="@+id/login_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint_login"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_login_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="39dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="272dp"
            android:background="@android:color/transparent"
            android:text="@string/login"
            android:textColor="@color/colorWrongUernamePassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <TextView
            android:id="@+id/login_email_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="273dp"
            android:layout_marginTop="63dp"
            android:text="@string/e_mail"
            android:textColor="#DE000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/login_signup_button"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="37dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="42dp"
        android:background="@android:color/transparent"
        android:text="@string/sign_up_first"
        android:textColor="@color/colorWrongUernamePassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_fragment"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Space
        android:id="@+id/space"
        android:layout_width="12dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toTopOf="@+id/login_fragment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <RelativeLayout
        android:id="@+id/login_email_icon_layout"
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:gravity="center"
        android:translationZ="100dp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/circle"
            android:contentDescription="@string/mail_icon_description" />

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/email_for_emailicon"
            app:srcCompat="@mipmap/ic_ail_login" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>


